# gravity-bridge

./: .gitignore  Makefile  clean_slate.sh  codecov.yml  docker-compose.yml  go.mod  go.sum  go.work  go.work.sum  readme.md  testnet.Dockerfile
.github/workflows/: automated-release.yml  brownie.yml  codeql.yml  go.yml  integration-tests.yml  node.js.yml  proto.yml  rust.yml
docs/design/: messages.md
docs/developer/: code-structure.md
ethereum/: Dockerfile
integration_tests/: chain.go  ethereum.go  fee_overflow_test.go  genesis.go  go.mod  go.sum  gorc_bootstrap.sh  happy_path_test.go  keys.go  orchestrator.go  setup_test.go  setup_upgrade_test.go  transaction_stress_test.go  upgrade_test.go  util.go  validator.go  validator_out.go  validator_out_test.go  valset_stress_test.go
integration_tests/ethereum/: Dockerfile  addresses.js  addresses.ts  hardhat.config.js  hardhat.config.ts  package-lock.json  package.json
integration_tests/evm/: Dockerfile  addresses.ts  hardhat.config.ts  package-lock.json
module/: Dockerfile  Makefile  ci.Dockerfile  coverage.txt  go.mod  go.sum
module/app/: app.go  encoding.go  export.go  sim_test.go  (+2 more)
orchestrator/: .dockerignore  Cargo.toml  Dockerfile  Makefile  README.md  ci.Dockerfile  startup.sh  testnet.Dockerfile
orchestrator/abi_build/: Cargo.toml
orchestrator/abi_build/src/: main.rs
orchestrator/client/: Cargo.toml
orchestrator/client/src/: main.rs
orchestrator/cosmos_gravity/: Cargo.toml
orchestrator/cosmos_gravity/src/: build.rs  crypto.rs  lib.rs  query.rs  send.rs
orchestrator/cosmos_gravity/src/ethereum/: logic_call.rs  mod.rs  send_to_cosmos.rs  utils.rs  valset_update.rs
orchestrator/cosmos_gravity/src/utils/: connection_prep.rs  ethereum.rs  message_signatures.rs
orchestrator/cosmos_gravity/src/utils/types/: logic_call.rs  valsets.rs
orchestrator/ethereum_gravity/: Cargo.toml
orchestrator/ethereum_gravity/src/: deploy_erc20.rs  erc20_utils.rs  lib.rs  logic_call.rs  send_to_cosmos.rs  submit_batch.rs  types.rs  utils.rs  valset_update.rs
orchestrator/gorc/: Cargo.toml  gorc.toml
orchestrator/gorc/src/: application.rs  commands.rs  config.rs  utils.rs
orchestrator/gorc/src/commands/: cosmos_to_eth.rs  deploy.rs  eth_to_cosmos.rs  keys.rs  orchestrator.rs  print_config.rs  query.rs  sign_delegate_keys.rs  start.rs  tests.rs  tx.rs
orchestrator/gorc/src/commands/deploy/: erc20.rs
orchestrator/gorc/src/commands/keys/: cosmos.rs  eth.rs
orchestrator/gorc/src/commands/keys/cosmos/: add.rs  delete.rs  list.rs  recover.rs  rename.rs  show.rs
orchestrator/gorc/src/commands/keys/eth/: add.rs  delete.rs  import.rs  list.rs  recover.rs  rename.rs  show.rs
orchestrator/gorc/src/commands/orchestrator/: start.rs
orchestrator/gorc/src/commands/query/: cosmos.rs  eth.rs
orchestrator/gorc/src/commands/tx/: cosmos.rs  eth.rs
orchestrator/gorc/tests/: acceptance.rs
orchestrator/gravity/: Cargo.toml  README.md
orchestrator/gravity/src/: build.rs  query.rs  send.rs
orchestrator/gravity/src/ethereum/: deploy_erc20.rs  erc20_utils.rs  mod.rs  send_to_cosmos.rs  submit_batch.rs  types.rs  utils.rs
orchestrator/gravity/src/utils/: connection_prep.rs  error.rs  mod.rs
orchestrator/gravity/src/utils/types/: batches.rs  ethereum_events.rs  mod.rs  signatures.rs
orchestrator/gravity_abi/: Cargo.toml  Gravity.json
orchestrator/gravity_abi/src/: erc20.rs  gravity.rs  lib.rs
orchestrator/gravity_abi_build/: Cargo.toml
orchestrator/gravity_abi_build/src/: main.rs
orchestrator/gravity_proto/: Cargo.toml
orchestrator/gravity_proto/src/: lib.rs
orchestrator/gravity_proto/src/prost/: cosmos_proto.rs  gravity.v1.rs  gravity.v2.rs
orchestrator/gravity_proto_build/: Cargo.toml
orchestrator/gravity_proto_build/src/: main.rs
orchestrator/gravity_utils/: Cargo.toml
orchestrator/gravity_utils/src/: connection_prep.rs  error.rs  ethereum.rs  gravity.rs  lib.rs  message_signatures.rs
orchestrator/gravity_utils/src/types/: batches.rs  ethereum_events.rs  gravity_contract_errors.rs  logic_call.rs  mod.rs  signatures.rs  valsets.rs
orchestrator/key_tools/: Cargo.toml
orchestrator/key_tools/src/: lib.rs
orchestrator/orchestrator/: Cargo.toml
orchestrator/orchestrator/src/: ethereum_event_watcher.rs  get_with_retry.rs  lib.rs  main.rs  main_loop.rs  metrics.rs  oracle_resync.rs
orchestrator/orchestrator/tests/: keygen.rs
orchestrator/proto_build/: Cargo.toml
orchestrator/register_delegate_keys/: Cargo.toml
orchestrator/register_delegate_keys/src/: main.rs
orchestrator/relayer/: Cargo.toml
orchestrator/relayer/src/: batch_relaying.rs  find_latest_valset.rs  lib.rs  logic_call_relaying.rs  main.rs  main_loop.rs  valset_relaying.rs
orchestrator/scripts/: build-release.sh
orchestrator/src/: lib.rs
orchestrator/test_runner/: Cargo.toml
orchestrator/test_runner/src/: arbitrary_logic.rs  bootstrapping.rs  happy_path.rs  happy_path_v2.rs  main.rs  orch_keys_update.rs  transaction_stress_test.rs  utils.rs  valset_stress.rs
solidity/: Dockerfile  MockAaveV2StablecoinCellar.json  aave-mock-deployer.js  aave-mock-deployer.ts  brownie-config.yaml  brownie_pm_install.txt  contract-deployer.js  contract-deployer.ts  debug-logs.js  debugging.js  debugging.ts  hardhat.config.js  hardhat.config.ts  package-lock.json  package.json  protocgen.sh  requirements.txt  test-aave-deployer.ts  test-erc20-deployer.js  test-erc20-deployer.ts  tsconfig.json
testnet/: chain.go  chain_test.go  channel_writer.go  dynamic_chain_test.go  e2e_arbitrary_logic_test.go  e2e_batch_stress_test.go  e2e_happy_path_test.go  e2e_orchestrator_keys_test.go  e2e_v2_happy_path_test.go  e2e_validator_out_test.go  e2e_valset_stress_test.go  ethereum.go  genesis.go  go.mod  go.sum  keygen_test.go  keys.go  node.go  prebuilt_ci_happy_path_test.go  prebuilt_ci_test.go  setup_test.go  start.sh  testnet.go  testnet_test.go  utils.go  validator.go  validator_test.go  with_pristine_e2e_environment.go  with_pristine_e2e_environment_test.go
upgrade_tests/: gravity_bridge_chain.go  multi_evm_test.go  orchestrator_node.go
(+230 files in other folders)
