# This is no longer a virtual manifest as it used to be.
# Also, the name was changed from orchestrator to gravity_bridge.
[package]
name = "gravity_bridge"
version = "0.2.0"
authors = ["PeggyJV"]
license = "Apache-2.0"
edition = "2018"
readme = "README.md"
description = """

"""

[workspace]
default-members = ["gorc", "orchestrator", "gravity_proto"]
members = [
	"orchestrator",
	"cosmos_gravity",
	"ethereum_gravity",
	"gravity_utils",
	"gravity_proto_build",
	"gravity_proto",
	"relayer",
	"register_delegate_keys",
	"gorc",
	"gravity_abi_build",
	"gravity_abi",
]

[patch."https://github.com/peggyjv/gravity-bridge"]
gravity_proto = { path = "./gravity_proto" }

[dependencies]
orchestrator = { path = "./orchestrator" }
cosmos_gravity = { path = "./cosmos_gravity" }
ethereum_gravity = { path = "./ethereum_gravity" }
gravity_utils = { path = "./gravity_utils" }
gravity_proto_build = { path = "./gravity_proto_build" }
gravity_proto = { path = "./gravity_proto" }
register_delegate_keys = { path = "./register_delegate_keys" }
gorc = { path = "./gorc" }
relayer = { path = "./relayer" }
gravity_abi_build = { path = "./gravity_abi_build" }
gravity_abi = { path = "./gravity_abi" }

[features]
ethermint = [
    "orchestrator/ethermint",
    "cosmos_gravity/ethermint",
    "relayer/ethermint",
    "gorc/ethermint",
    "register_delegate_keys/ethermint",
]
