# This is no longer a virtual manifest as it used to be.
# Also, the name was changed from orchestrator to gravity_bridge.
[package]
name = "gravity_bridge"
version = "4.0.0"
authors = ["PeggyJV"]
license = "Apache-2.0"
edition = "2018"
readme = "README.md"
description = """

"""

resolver = "2"

[workspace]
default-members = ["gorc", "orchestrator", "test_runner"]
members = [
	"orchestrator",
	"cosmos_gravity",
	"gravity_utils",
	"gravity_proto_build",
	"test_runner",
	"gravity_proto",
	"relayer",
	"register_delegate_keys",
	"gorc",
	"gravity_abi_build",
	"gravity_abi",
]

[dependencies]
orchestrator = { path = "./orchestrator" }
cosmos_gravity = { path = "./cosmos_gravity" }
gravity_utils = { path = "./gravity_utils" }
gravity_proto = { path = "./gravity_proto" }
gorc = { path = "./gorc" }
relayer = { path = "./relayer" }
gravity_abi = { path = "./gravity_abi" }

[workspace.dependencies]
bytes = "1"
clarity = "0.4.11"
cosmos-sdk-proto = "0.6.3"
deep_space = { git = "https://github.com/iqlusioninc/deep_space/", branch = "master" }
env_logger = "0.8"
ethers = { git = "https://github.com/iqlusioninc/ethers-rs.git", branch = "zaki/error_abi_support", features = ["abigen"] }
futures = "0.3.18"
lazy_static = "1.4.0"
log = "0.4"
openssl = { version = "0.10", features = ["vendored"] }
openssl-probe = "0.1.6"
prost = "0.7"
rand = "0.8"
serde = { version = "1.0", features = ["serde_derive"] }
serde_derive = "1.0"
serde_json = "1.0.69"
sha3 = "0.9"
tokio = { version = "1.28", features = ["macros", "rt-multi-thread"] }
tonic = "0.4"

[features]
ethermint = [
    "orchestrator/ethermint",
    "cosmos_gravity/ethermint",
    "relayer/ethermint",
    "gorc/ethermint",
]
