[package]
name = "abi_build"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { git = "https://github.com/mattsse/ethers-rs", branch = "matt/fix-unit8", features = ["abigen"]}
serde_derive = "1.0"
serde_json = "1.0.69"
serde = "1.0"
