[package]
name = "cosmos_gravity"
version = "0.1.0"
authors = ["Justin Kilpatrick <justin@althea.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gravity_utils = {path = "../gravity_utils"}
ethereum_gravity = {path = "../ethereum_gravity"}
gravity_proto = {path = "../gravity_proto/"}

ethers = { version = "1.0.0",  default-features = false, features = ["abigen"] }
clarity = "0.4.16"
serde = "1.0"
log = "0.4"
sha3 = "0.9"
tokio = "1.21"
web30 = "0.15.4"
tonic = "0.4"
cosmos-sdk-proto = "0.6.3"
prost = "0.11"
prost-types = "0.11"
bytes = "1"
ocular = { git = "https://github.com/peggyjv/ocular", branch = "collin/orchestrator-parallel" }
ocular-somm-gravity = { git = "https://github.com/peggyjv/ocular-somm-gravity" }
eyre = "0.6.8"

[dev-dependencies]
env_logger = "0.8"
rand = "0.8"
actix = "0.12"

[features]
ethermint = []
