[package]
name = "cosmos_gravity"
version = "2.0.4"
authors = ["Justin Kilpatrick <justin@althea.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { workspace = true }
clarity = { workspace = true }
cosmos-sdk-proto = "0.6.3"
deep_space = { workspace = true }
ethers = { workspace = true }
gravity_proto = {path = "../gravity_proto/"}
gravity_utils = {path = "../gravity_utils"}
lazy_static = "1.4.0"
log = { workspace = true }
prost = { workspace = true }
prost-types = "0.7"
regex = "1.5.4"
serde = { workspace = true }
sha3 = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }

[dev-dependencies]
actix = "0.12"
env_logger = { workspace = true }
rand = { workspace = true }

[features]
ethermint = []
