[package]
name = "cosmos_gravity"
version = "2.0.4"
authors = ["Justin Kilpatrick <justin@althea.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { workspace = true }
clarity = { workspace = true }
cosmos-sdk-proto = "0.6.3"
deep_space = { git = "https://github.com/iqlusioninc/deep_space/", branch = "master" }
ethers = { workspace = true }
gravity_abi = { path = "../gravity_abi" }
gravity_proto = {path = "../gravity_proto/"}
lazy_static = "1.4.0"
log = { workspace = true }
num-bigint = "0.4"
num256 = "0.3"
prost = { workspace = true }
prost-types = "0.7"
regex = "1.5.4"
rustc-hex = "2.1.0"
serde = { workspace = true }
sha3 = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
url = "2"

[dev-dependencies]
actix = "0.12"
env_logger = { workspace = true }
rand = { workspace = true }

[features]
ethermint = []
