[package]
name = "ethereum_gravity"
version = "0.1.0"
authors = ["Justin Kilpatrick <justin@althea.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gravity_abi = { path = "../gravity_abi" }
gravity_utils = { path = "../gravity_utils" }

deep_space = { workspace = true }
ethers = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
