[package]
name = "gorc"
authors = []
version = "2.0.1"
edition = "2021"
rust-version = "1.58"

[dependencies]
clap = "3"
serde = { version = "1", features = ["serde_derive"] }
thiserror = "1"
regex = "1.6.0"

cosmos_gravity = { path = "../cosmos_gravity" }
ethereum_gravity = { path = "../ethereum_gravity" }
gravity_proto = { path = "../gravity_proto" }
gravity_utils = { path = "../gravity_utils" }
orchestrator = { path = "../orchestrator" }
relayer = { path = "../relayer" }

ethers = { version = "1.0.0",  default-features = false, features = ["abigen"] }
clarity = "0.4.16"
actix-rt = "2.7"
rpassword = "5"
bip32 = "0.4"
k256 = { version = "0.11", features = ["pem"] }
pkcs8 = { version = "0.9", features = ["pem"] }
signatory = "0.23.2"
rand_core = { version = "0.6", features = ["std"] }
openssl-probe = "0.1.5"

abscissa_tokio = { version = "0.6.0", features = ["actix"] }
web30 = "0.15"
tokio = "1"
tonic = "0.4"
toml = "0.5"
env_logger = "0.8"
log = "0.4"

prost = "0.7"
bytes = "1"
proc-macro2 = "1.0.47"
ocular = { git = "https://github.com/peggyjv/ocular", branch = "collin/orchestrator-parallel" }
ocular-somm-gravity = { git = "https://github.com/peggyjv/ocular-somm-gravity" }

[dependencies.abscissa_core]
version = "0.6.0"
# optional: use `gimli` to capture backtraces
# see https://github.com/rust-lang/backtrace-rs/issues/189
# features = ["gimli-backtrace"]

[dev-dependencies]
abscissa_core = { version = "0.6.0", features = ["testing"] }
once_cell = "1.16"

[features]
ethermint = ["cosmos_gravity/ethermint", "orchestrator/ethermint", "relayer/ethermint"]
