[package]
name = "gorc"
authors = []
version = "4.0.0"
edition = "2021"
rust-version = "1.63"

[dependencies]
clap = "3"
serde = { version = "1", features = ["serde_derive"] }
thiserror = "1"
regex = "1.5.4"

cosmos_gravity = { path = "../cosmos_gravity" }
ethereum_gravity = { path = "../ethereum_gravity" }
gravity_proto = { path = "../gravity_proto" }
gravity_utils = { path = "../gravity_utils" }
orchestrator = { path = "../orchestrator" }
relayer = { path = "../relayer" }

deep_space = { git = "https://github.com/iqlusioninc/deep_space/", branch = "master" }
ethers = { git = "https://github.com/iqlusioninc/ethers-rs.git", branch = "zaki/error_abi_support", features = ["abigen"] }
clarity = "0.4.12"
rpassword = "5"
bip32 = "0.2"
k256 = { version = "0.9", features = ["pem"] }
pkcs8 = { version = "0.7", features = ["pem"] }
signatory = "0.23.0-pre"
rand_core = { version = "0.6", features = ["std"] }
openssl-probe = "0.1.4"

abscissa_tokio = { version = "0.6.0", features = ["actix"] }
tokio = "1"
toml = "0.5"
log = "0.4"

prost = "0.7"
bytes = "1"

[dependencies.abscissa_core]
version = "0.6.0"
# optional: use `gimli` to capture backtraces
# see https://github.com/rust-lang/backtrace-rs/issues/189
# features = ["gimli-backtrace"]

[dev-dependencies]
abscissa_core = { version = "0.6.0", features = ["testing"] }
once_cell = "1.2"

[features]
ethermint = ["cosmos_gravity/ethermint", "orchestrator/ethermint", "relayer/ethermint"]
