[package]
name = "gorc"
authors = []
version = "4.0.0"
edition = "2021"
rust-version = "1.63"

[dependencies]
abscissa_tokio = { version = "0.8.0", features = ["actix"] }
bip32 = "0.2"
bytes = { workspace = true }
clap = "4"
clarity = { workspace = true }
cosmos_gravity = { path = "../cosmos_gravity" }
deep_space = { workspace = true }
ethers = { workspace = true }
gravity_proto = { path = "../gravity_proto" }
k256 = { version = "0.9", features = ["pem"] }
log = { workspace = true }
openssl-probe = { workspace = true }
orchestrator = { path = "../orchestrator" }
pkcs8 = { version = "0.7", features = ["pem"] }
prost = { workspace = true }
rand_core = { version = "0.6", features = ["std"] }
regex = "1.5.4"
relayer = { path = "../relayer" }
rpassword = "5"
serde = { workspace = true }
signatory = "0.23.0-pre"
thiserror = "1"
tokio = { workspace = true }
toml = "0.5"

[dependencies.abscissa_core]
version = "0.8.1"
# optional: use `gimli` to capture backtraces
# see https://github.com/rust-lang/backtrace-rs/issues/189
# features = ["gimli-backtrace"]

[dev-dependencies]
abscissa_core = { version = "0.8.1", features = ["testing"] }
once_cell = "1.2"

[features]
ethermint = ["cosmos_gravity/ethermint", "orchestrator/ethermint", "relayer/ethermint"]
