[package]
name = "gravity_abi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { version = "1.0.0",  default-features = false, features = ["abigen"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0.87"
