[package]
name = "gravity_proto"
version = "0.2.0"
authors = ["Justin Kilpatrick <justin@althea.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11"
prost-types = "0.11"
bytes = "1"
cosmos-sdk-proto = "0.14.0"
tonic = "0.8"
