[package]
name = "gravity_utils"
version = "0.1.0"
authors = ["Justin Kilpatrick <justin@althea.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gravity_abi = { path = "../gravity_abi" }
gravity_proto = { path = "../gravity_proto/" }
cosmos-sdk-proto = "0.6.3"
deep_space = { workspace = true }
ethers = { workspace = true }
clarity = { workspace = true }
lazy_static = "1.4.0"
num256 = "0.3"
serde_derive = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
num-bigint = "0.4"
log = { workspace = true }
url = "2"
sha3 = { workspace = true }
rustc-hex = "2.1.0"

[dev-dependencies]
rand = "0.8"
actix = "0.12"
