[package]
name = "gravity_utils"
version = "0.1.0"
authors = ["Justin Kilpatrick <justin@althea.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clarity = { workspace = true }
cosmos-sdk-proto = { workspace = true }
cosmos_gravity = { path = "../cosmos_gravity" }
deep_space = { workspace = true }
ethers = { workspace = true }
futures = { workspace = true }
gravity_abi = { path = "../gravity_abi" }
gravity_proto = { path = "../gravity_proto/" }
lazy_static = { workspace = true }
log = { workspace = true }
num-bigint = "0.4"
num256 = "0.3"
openssl-probe = { workspace = true }
rand = { workspace = true }
rustc-hex = "2.1.0"
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
sha3 = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
url = "2"

[dev-dependencies]
actix = "0.12"
