[package]
name = "key-tools"
version = "0.1.0"
authors = []
edition = "2018"

[dependencies]
hkd32 = { version = "0.6.0", features = ["mnemonic"] }
rand_core = { version = "0.6.3", features = ["getrandom"] }
signatory = { version = "0.23.0-pre.2", features = [
	"std",
	"ecdsa",
	"secp256k1",
] }

[dev-dependencies]
tempfile = "3.0.2"
