[package]
name = "orchestrator"
version = "4.0.0"
authors = ["Justin Kilpatrick <justin@althea.net>"]
edition = "2018"

[lib]
name = "orchestrator"
path = "src/lib.rs"

[dependencies]
axum = "0.1.2"
clarity = { workspace = true }
gravity = { path = "../gravity" }
ethers = { workspace = true }
futures = { workspace = true }
gravity_abi = { path = "../gravity_abi" }
gravity_proto = { path = "../gravity_proto" }
hyper = "0.14.11"
lazy_static = { workspace = true }
log = { workspace = true }
openssl = { workspace = true }
openssl-probe = { workspace = true }
prometheus = "0.12.0"
rand = { workspace = true }
relayer = { path = "../relayer" }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }

# this is a dirty trick, we depent transitively on OpenSSL it's never
# called directly in this crate, but if we specify this dep we can enable
# this feature for all the crates in our dependency tree which depend on
# this crate. This allows for easy cross compiled builds because the 'vendored'
# feature includes it's own OpenSSL version that's compiled on the fly
# If ANY crate in this workspace has this it will work for all of them.

[features]
ethermint = ["gravity/ethermint", "relayer/ethermint"]
