[package]
name = "somm_proto_build"
version = "0.1.0"
authors = ["PeggyJV <info@peggy.cool>, Justin Kilpatrick <justin@althea.net>"]
edition = "2018"
description = "This crate will build gravity_proto. Also note, this will generate too many files. Only gravity.v1.rs is required"
license = "Apache-2.0"

[dependencies]
prost = "0.7"
tonic = "0.4"
prost-build = "0.7"
tempdir = "0.3"
walkdir = "2"
tonic-build = "0.4"
regex = "1.5"