[package]
name = "register_delegate_keys"
version = "2.0.0"
authors = ["Justin Kilpatrick <justin@althea.net>"]
edition = "2018"

[[bin]]
name = "register-delegate-keys"
path = "src/main.rs"

[dependencies]
relayer = {path = "../relayer/"}
ethereum_gravity = {path = "../ethereum_gravity"}
cosmos_gravity = {path = "../cosmos_gravity"}
gravity_utils = {path = "../gravity_utils"}
gravity_proto = {path = "../gravity_proto/"}

deep_space = { git = "https://github.com/iqlusioninc/deep_space/", branch = "master" }
ethers = { git = "https://github.com/iqlusioninc/ethers-rs.git", branch = "zaki/error_abi_support", features = ["abigen"] }
contact = "0.4"
serde_derive = "1.0"
clarity = "0.4.11"
docopt = "1"
serde = "1.0"
actix-rt = "2.5"
lazy_static = "1"
web30 = "0.15"
env_logger = "0.8"
log = "0.4.14"
openssl-probe = "0.1"
rand = "0.8"

[features]
ethermint = ["cosmos_gravity/ethermint", "relayer/ethermint"]
