[package]
name = "register_delegate_keys"
version = "2.1.0"
authors = ["Justin Kilpatrick <justin@althea.net>"]
edition = "2018"

[[bin]]
name = "register-delegate-keys"
path = "src/main.rs"

[dependencies]
relayer = {path = "../relayer/"}
ethereum_gravity = {path = "../ethereum_gravity"}
cosmos_gravity = {path = "../cosmos_gravity"}
gravity_utils = {path = "../gravity_utils"}
gravity_proto = {path = "../gravity_proto/"}

ethers = { version = "1.0.0",  default-features = false, features = ["abigen"] }
contact = "0.4"
serde_derive = "1.0"
clarity = "0.4.16"
docopt = "1"
serde = "1.0"
actix-rt = "2.7"
lazy_static = "1"
web30 = "0.15"
env_logger = "0.8"
log = "0.4.17"
openssl-probe = "0.1"
rand = "0.8"
ocular = { git = "https://github.com/peggyjv/ocular", branch = "collin/orchestrator-parallel", ref = "a5166de828cabf6472daf2c58fec84ead14f7651" }

[features]
ethermint = ["cosmos_gravity/ethermint", "relayer/ethermint"]
