[package]
name = "register_delegate_keys"
version = "2.0.0"
authors = ["Justin Kilpatrick <justin@althea.net>"]
edition = "2018"

[[bin]]
name = "register-delegate-keys"
path = "src/main.rs"

[dependencies]
clarity = { workspace = true }
cosmos_gravity = {path = "../cosmos_gravity"}
deep_space = { workspace = true }
docopt = "1"
env_logger = { workspace = true }
ethers = { workspace = true }
gravity_proto = {path = "../gravity_proto/"}
gravity_utils = {path = "../gravity_utils"}
lazy_static = { workspace = true }
log = { workspace = true }
openssl-probe = { workspace = true }
rand = { workspace = true }
relayer = {path = "../relayer/"}
serde = { workspace = true }
serde_derive = { workspace = true }
tokio = { workspace = true }
web30 = "0.15"

[features]
ethermint = ["cosmos_gravity/ethermint", "relayer/ethermint"]
