[package]
name = "cosmos_relayer"
version = "0.1.0"
authors = ["PeggyJV <info@peggy.cool>, Justin Kilpatrick <justin@althea.net>"]
edition = "2018"
description = "This is to build the relayer logic (i.e. cosmos to ethereum) as a seperate binary. It also contains the library for the relayer."
license = "Apache-2.0"

[lib]
name = "relayer"
path = "src/lib.rs"

[[bin]]
name = "relayer"
path = "src/main.rs"

[dependencies]
cosmos_ethereum_gravity = { version = "0.1.0", path = "../ethereum_gravity" }
cosmos_gravity = { version = "0.1.0", path = "../cosmos_gravity" }
cosmos_gravity_utils = { version = "0.1.0", path = "../gravity_utils" }
cosmos_gravity_proto = { version = "0.1.0", path = "../gravity_proto/" }

deep_space = { version = "2.4.3", git = "https://github.com/iqlusioninc/deep_space/", branch = "zaki/tendermint_0_21" }
serde_derive = "1.0"
clarity = "0.4.11"
docopt = "1"
serde = "1.0"
actix-rt = "2"
lazy_static = "1"
web30 = "0.14.4"
num256 = "0.3"
log = "0.4"
env_logger = "0.8"
tokio = "1.4"
tonic = "0.4"
openssl-probe = "0.1"


[dev-dependencies]
actix = "0.11"
