[package]
name = "relayer"
version = "2.0.0"
authors = ["Justin Kilpatrick <justin@althea.net>"]
edition = "2018"

[lib]
name = "relayer"
path = "src/lib.rs"

[[bin]]
name = "relayer"
path = "src/main.rs"

[dependencies]
ethereum_gravity = { path = "../ethereum_gravity" }
cosmos_gravity = { path = "../cosmos_gravity" }
gravity_abi = { path = "../gravity_abi" }
gravity_utils = { path = "../gravity_utils" }
gravity_proto = { path = "../gravity_proto" }
ethers = { version = "1.0.0",  default-features = false, features = ["abigen"] }
serde_derive = "1.0"
clarity = "0.4.16"
docopt = "1"
serde = "1.0"
actix-rt = "2.7"
lazy_static = "1"
web30 = "0.15"
log = "0.4"
env_logger = "0.8"
tokio = "1.21"
tonic = "0.4"
openssl-probe = "0.1"
ocular = { git = "https://github.com/peggyjv/ocular", branch = "collin/orchestrator-parallel", ref = "a5166de828cabf6472daf2c58fec84ead14f7651" }
ocular-somm-gravity = { git = "https://github.com/peggyjv/ocular-somm-gravity" }

[dev-dependencies]
actix = "0.12"

[features]
ethermint = ["cosmos_gravity/ethermint"]
