[package]
name = "relayer"
version = "4.0.0"
authors = ["Justin Kilpatrick <justin@althea.net>"]
edition = "2018"

[lib]
name = "relayer"
path = "src/lib.rs"

[[bin]]
name = "relayer"
path = "src/main.rs"

[dependencies]
clarity = { workspace = true }
gravity = { path = "../gravity" }
docopt = "1"
env_logger = { workspace = true }
ethers = { workspace = true }
gravity_abi = { path = "../gravity_abi" }
gravity_proto = { path = "../gravity_proto" }
lazy_static = { workspace = true }
log = { workspace = true }
openssl-probe = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }

[dev-dependencies]
actix = "0.12"

[features]
ethermint = ["gravity/ethermint"]
