[package]
name = "test_runner"
version = "0.1.0"
authors = ["Justin Kilpatrick <justin@althea.net>"]
edition = "2018"

# only becuase I like - more in names
# [[bin]]
# name = "test-runner"
# path = "src/main.rs"

[dependencies]
ethereum_gravity = {path = "../ethereum_gravity"}
cosmos_gravity = {path = "../cosmos_gravity"}
gravity_abi = { path = "../gravity_abi" }
gravity_utils = {path = "../gravity_utils"}
gravity_proto = {path = "../gravity_proto/"}

deep_space = { git = "https://github.com/iqlusioninc/deep_space/", branch = "master" }
serde_derive = "1.0"
clarity = "0.4.11"
ethers = { git = "https://github.com/iqlusioninc/ethers-rs.git", branch = "zaki/error_abi_support", features = ["abigen"] }
serde = "1.0"
lazy_static = "1"
url = "2"
log = "0.4"
env_logger = "0.8"
tokio = "1.4.0"
rand = "0.8"
tonic = "0.4"
futures = "0.3.18"
hex = "0.4.3"

[features]
ethermint = ["cosmos_gravity/ethermint"]
