[package]
name = "test_runner"
version = "0.1.0"
authors = ["Justin Kilpatrick <justin@althea.net>"]
edition = "2018"

# only becuase I like - more in names
# [[bin]]
# name = "test-runner"
# path = "src/main.rs"

[dependencies]
cosmos_gravity = {path = "../cosmos_gravity"}
gravity_abi = { path = "../gravity_abi" }
gravity_proto = {path = "../gravity_proto/"}

serde_derive = { workspace = true }
clarity = { workspace = true }
ethers = { git = "https://github.com/iqlusioninc/ethers-rs.git", branch = "zaki/error_abi_support", features = ["abigen"] }
serde = { workspace = true }
lazy_static = { workspace = true }
url = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
tokio = { workspace = true }
rand = { workspace = true }
tonic = { workspace = true }
futures = "0.3.18"
hex = "0.4.3"

[features]
ethermint = ["cosmos_gravity/ethermint"]
